<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/nav_date"
        android:icon="@drawable/ic_date"
        android:title="@string/date"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />


    <item android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item android:id="@+id/nav_send"
        android:icon="@drawable/ic_send"
        android:title="@string/send"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

</menu>